--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "655f6c60",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "4729a28b",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4     69.85        95          22        8.34  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,23 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "96f677ed",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc859bc9dc604b6587dfbbe89158ad98",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "WeightedHeatmap(data_bounds=[(-45.70077705340148, -179.99999), (85.0, 179.99999)], dissipating=False, location…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'locations' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_752/3160688762.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Configure gmaps to use your Google API key.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mgmaps\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mheatmap_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlocations\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mtemp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmax_temp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdissipating\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_intensity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m300\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpoint_radius\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'locations' is not defined"
+     ]
     }
    ],
    "source": [
@@ -179,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "d3086e57",
    "metadata": {},
    "outputs": [],
@@ -353,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8ba1f6a2",
+   "id": "117bbe32",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "68d9c58b",
+   "id": "853021d6",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2491a393",
+   "id": "4081ed6b",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "10d090d8",
+   "id": "0747f4a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "80713e09",
+   "id": "258a8f5c",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0e0d1295",
+   "id": "5d1f247d",
    "metadata": {},
    "outputs": [
     {
@@ -962,14 +959,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e8747fb8",
+   "execution_count": 31,
+   "id": "d7f036f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7745ea63be7409abc3dcd933e80116b",
+       "model_id": "37f5579a28f4434b81e7b43e73882e01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -997,8 +994,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "ae1f9a35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "# Store the DataFrame Row.\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c3ce0a96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46c792406fe94dcba04f0a2fbfac4cd8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Add a heatmap of temperature for the vacation spots and a pop-up marker for each city.\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7a31db0b",
+   "id": "f6b4df00",
    "metadata": {},
    "outputs": [],
    "source": []
